# kitty

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agentflow/: state.json
.codex/: config.toml
.codex/agents/: architect.toml  auditor.toml  code-reviewer.toml  developer.toml  doc-reviewer.toml  pm.toml  qa.toml  tester.toml
.codex/prompts/: file-index.md  file-protocol.md  glossary.md  main-thread.md  report-contract.md  subagent-contract.md
agentflow/: roadmap.md  vision.md
agentflow/adr/: 00-adr-guide.md
agentflow/spec/: 00-spec-guide.md
codexspec/: roadmap.md  vision.md
codexspec/adr/: 00-adr-guide.md
codexspec/runtime/: state.json
codexspec/spec/: 00-spec-guide.md
crates/acl/: Cargo.toml
crates/acl/src/: helper.rs  lib.rs  schema.rs
crates/acl/src/helper/: duration.rs  one_or_many.rs  serde_string.rs  string.rs
crates/acl/src/schema/: common.rs  defaults.rs  dns.rs  inbound.rs  log.rs  macros.rs  outbound.rs  root.rs  route.rs  rule_set.rs
crates/acl/src/schema/common/: action.rs  rule.rs  shared.rs
crates/acl/src/schema/dns/: action.rs  cache.rs  rule.rs  server.rs
crates/acl/src/schema/macros/: dns_server.rs  inbound.rs  matcher.rs  outbound.rs
crates/acl/src/schema/route/: action.rs  rule.rs
crates/acl/tests/: schema_decode.rs
crates/application/: Cargo.toml
crates/domain/: Cargo.toml
crates/ebpf-common/: Cargo.toml
crates/ebpf-programs/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/interfaces/: Cargo.toml
crates/schema/: Cargo.toml
crates/schema/src/: common.rs  dns.rs  inbound.rs  lib.rs  log.rs  outbound.rs  root.rs  route.rs  rule_set.rs
crates/schema/src/common/: defaults.rs  duration.rs  matcher_fields.rs  schema_macros.rs  serde_helper.rs  string_utils.rs  types.rs
crates/schema/src/dns/: action.rs  cache.rs  rule.rs  server.rs
crates/schema/src/route/: action.rs  rule.rs
crates/schema/tests/: decode_config.rs
docs/: README.md
docs/00-overview/: 00-product-goals.md  00-reading-order.md  01-product-goals.md  01-terminology.md  02-scope.md  03-terminology.md
docs/01-architecture/: 00-ddd-boundary.md  00-layered-ddd.md  01-workspace-and-crate-boundary.md  02-dependency-direction.md  02-runtime-model.md  03-management-control-data-plane.md  03-rule-ir-model.md  04-runtime-model.md  05-rule-ir-model.md  06-ebpf-architecture.md
docs/02-config/: 00-config-contract.md  01-acl-schema.md  01-schema-code-guide.md  02-default-values.md  03-normalize-rules.md  04-logging-config.md  05-dns-config.md  06-route-config.md  07-rule-set-config.md
docs/03-compile-pipeline/: 00-orchestration.md  01-config-decode.md  01-log-bootstrap.md  01-rule-set.md  02-basic-validate.md  02-config-decode.md  02-match-index-compile.md  03-schema-normalize.md  03-structural-normalize.md  04-reload-diff-precheck.md  04-semantic-collect.md  05-basic-validate.md  05-semantic-validate.md  06-loop-check.md  06-semantic-validate.md  07-loop-check.md  07-rule-set-reference-prune.md  08-rule-set-load-cache.md  08-rule-set-reference-prune.md  09-rule-set-decode-verify.md  09-rule-set-load-cache.md  10-rule-set-decode-verify.md  10-rule-set-expand-merge.md  11-priority-flattening.md  11-rule-set-expand-merge.md  12-priority-flattening.md  12-string-interning.md  13-match-index-compile.md  13-string-interning.md  14-match-index-compile.md  14-runtime-plan.md  15-listener-apply-plan.md  15-runtime-plan.md  16-atomic-publish.md  16-listener-apply-plan.md  17-atomic-publish.md  17-post-publish-maintenance.md
docs/04-match-pipeline/: 00-orchestration.md  01-ebpf.md  01-ingress-classify.md  02-context-normalize.md  03-dns-cache-lookup.md  04-context-enrich.md  05-index-probe.md  06-bitmap-short-circuit.md  07-first-match-evaluator.md  08-action-dispatch.md  09-ebpf-map-sync.md
docs/05-operations/: 00-process-bootstrap.md  00-start-and-reload.md  01-logging-and-error.md  01-start.md  02-external-reload.md  03-internal-rule-set-refresh.md  04-cache-cleanup.md  05-logging-and-error.md
(+256 files in other folders)
