[workspace]
members = [
    "crates/bin",
    "crates/interfaces",
    "crates/application/control-plane",
    "crates/application/data-plane",
    "crates/domain",
    "crates/infrastructure",
    "crates/acl",
    "crates/ebpf-common",
    "crates/ebpf-programs",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_with = { version = "3.15.1", default-features = false }
humantime = { version = "2", default-features = false }
humantime-serde = { version = "1.1", default-features = false }
macaddr = { version = "1", default-features = false }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"